[package]
name = "gwynn"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/mpk", "crates/texture", "crates/model", "crates/mpkinfo"]

[workspace.dependencies]
anyhow = "1.0.91"
binrw = "0.14.1"
bytemuck = "1.19.0"
hashbrown = "0.15.0"
tracing = "0.1.40"
wgpu = "22.1"
uuid = "1.11.0"

[dependencies]
gwynn-mpk = { path = "./crates/mpk" }
gwynn-model = { path = "./crates/model" }
gwynn-texture = { path = "./crates/texture" }

anyhow.workspace = true
binrw.workspace = true
eframe = { version = "0.31.1", default-features = false, features = ["wgpu"] }
glob = "0.3.1"
hashbrown.workspace = true
hex = "0.4.3"
image = { version = "0.25.4", default-features = false, features = ["png"] }
rayon = "1.10.0"
rmpv = { version = "1.3", features = ["serde"] }
rmp-serde = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.18"
tracing.workspace = true
uuid.workspace = true
winit = { version = "0.30.7", features = ["x11", "wayland"] }
