[package]
name = "gwynn"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/mpk",
    "crates/texture",
    "crates/model",
    "crates/mpkinfo",
    "crates/pyc",
]

[workspace.dependencies]
anyhow = "1.0"
binrw = "0.15"
bytemuck = "1.23"
hashbrown = "0.16.0"
tracing = "0.1.40"
wgpu = "25"
uuid = "1.18"

[dependencies]
gwynn-mpk = { path = "./crates/mpk" }
gwynn-model = { path = "./crates/model" }
gwynn-texture = { path = "./crates/texture" }

anyhow.workspace = true
# binrw.workspace = true
eframe = { version = "0.32.3", default-features = false, features = ["wgpu"] }
# eframe = { version = "0.32.3", default-features = false, features = ["glow"] }
egui = "0.32.3"
# glob = "0.3.1"
# hashbrown.workspace = true
# hex = "0.4.3"
# image = { version = "0.25", default-features = false, features = ["png"] }
# rayon = "1.10.0"
# rmpv = { version = "1.3", features = ["serde"] }
# rmp-serde = "1.3"
# serde_json = "1.0"
# serde = { version = "1.0", features = ["derive"] }
# uuid.workspace = true
# winit = { version = "0.30.7", features = ["x11", "wayland"] }

subsecond = "0.7.0-rc.0"
dioxus-devtools = "0.7.0-rc.0"
log = "0.4.28"
env_logger = "0.11.8"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
