[package]
name = "gwynn"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/mpk",
    "crates/texture",
    "crates/model",
    "crates/mpkinfo",
    "crates/pyc",
    "crates/fs",
]

[workspace.dependencies]
anyhow = "1.0"
binrw = "0.15"
bytemuck = "1.23"
hashbrown = "0.16.0"
log = "0.4.28"
wgpu = "25"
uuid = "1.18"

[dependencies]
gwynn-mpk = { path = "./crates/mpk" }
gwynn-model = { path = "./crates/model" }
gwynn-texture = { path = "./crates/texture" }

anyhow.workspace = true
# binrw.workspace = true
eframe = { version = "0.32.3", default-features = false, features = ["wgpu"] }
egui = "0.32.3"
# glob = "0.3.1"
# hashbrown.workspace = true
# hex = "0.4.3"
# image = { version = "0.25", default-features = false, features = ["png"] }
# rayon = "1.10.0"
# rmpv = { version = "1.3", features = ["serde"] }
# rmp-serde = "1.3"
# serde_json = "1.0"
# serde = { version = "1.0", features = ["derive"] }
# uuid.workspace = true
# winit = { version = "0.30.7", features = ["x11", "wayland"] }

subsecond = "0.7.0-rc.0"
dioxus-devtools = "0.7.0-rc.0"
log.workspace = true
env_logger = "0.11.8"
linked-hash-map = "0.5.6"
uuid.workspace = true
crossbeam = "0.8.4"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
