[package]
name = "gwynn-fs"
version = "0.0.0"
edition = "2024"

[dependencies]
gwynn-mpk = { path = "../mpk" }
gwynn-mpkinfo = { path = "../mpkinfo" }

anyhow.workspace = true
base64 = "0.22.1"
bootsector = "0.2.0"
ext4 = { git = "https://github.com/cohaereo/vdi-rs.git" }
log = "0.4.28"
thiserror = "2"
unix_path = "1.0.1"
vdi = "0.2.0"
zip = { version = "5.1.1", default-features = false, features = [
    "deflate-zopfli",
] }
uuid.workspace = true
binrw.workspace = true
