[package]
name = "gwynn-mpk"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
binrw.workspace = true
flate2 = "1.1.2"
hashbrown.workspace = true
lz4_flex = "0.11.5"
tracing.workspace = true
uuid.workspace = true
zstd = "0.13.3"

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
glob = "0.3.3"
rayon = "1.11.0"
